--- a/client/my-app/src/app/components/home/home.component.css
+++ b/client/my-app/src/app/components/home/home.component.css
@@ -20,7 +20,33 @@ h1{
 }
 p{
     text-align: center;
-    margin-top: 4vh;
     font-size: 3vh;
     color: black;
+    margin-top: 23vh;
+}@import url(http://xn--4dbhee1akm8a.co.il/gallery/1082.jpg);
+
+body{
+  background:hsla(0,0%,0%,1);
+  font-family: 'Ubuntu', sans-serif; 
+}
+h2{
+  color:hsla(255,255%,255%,1);
+  font-size:1.5em;
+}
+.svg{
+  width:100%;
+  height:50%;
+  text-align:center;
+  margin-top:5em;
+  margin-top: -14vh;
+
+}
+svg{
+  max-width:100%;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 66vh;
+  margin-top: 5vh;
 }
