--- a/client/my-app/src/app/components/account/account.component.html
+++ b/client/my-app/src/app/components/account/account.component.html
@@ -1,10 +1,10 @@
 
 <body>
     <div id="nav">
-        <a href="#" class="navlink" *ngIf="!user" routerLink="/account/register">
+        <a href="#" class="navlink" *ngIf="!user" routerLink="/BookStore/account/register">
             register
         </a>
-        <a href="#" class="navlink" *ngIf="!user" routerLink="/account/login">
+        <a href="#" class="navlink" *ngIf="!user" routerLink="/BookStore/account/login">
             login
         </a>
 
