--- a/client/my-app/src/app/components/header/header.component.html
+++ b/client/my-app/src/app/components/header/header.component.html
@@ -10,13 +10,13 @@
             <h1>Hello user</h1>
             <img  src="http://static.eharmony.com/blog/wp-content/uploads/2010/04/eHarmony-Blog-profile-picture.jpg" />
         </div>
-        <a href="#" class="navlink" routerLink="/account">
+        <a href="#" class="navlink" routerLink="BookStore/account">
             ACCOUNT
         </a>
-        <a href="#" class="navlink" routerLink="/products">
+        <a href="#" class="navlink" routerLink="BookStore/products">
             PRODUCTS
         </a>
-        <a href="#" class="navlink" *ngIf="user" routerLink="/cart">
+        <a href="#" class="navlink" *ngIf="user" routerLink="BookStore/cart">
             CART
         </a>
     </div>
