--- a/client/my-app/src/app/components/cart-product/cart-product.component.html
+++ b/client/my-app/src/app/components/cart-product/cart-product.component.html
@@ -1,9 +1,9 @@
 
   <div class="item  col-xs-4 col-md-3">
     <div class="thumbnail">
-    <img class="group list-group-image" src="http://absfreepic.com/absolutely_free_photos/small_photos/book-shelf-3264x2448_35867.jpg"
-        alt="" />
-        <!-- <img class="group list-group-image" src="{{products.imageLinks}}" alt=""> -->
+    <!-- <img class="group list-group-image" src="http://absfreepic.com/absolutely_free_photos/small_photos/book-shelf-3264x2448_35867.jpg"
+        alt="" /> -->
+        <img class="group list-group-image" [src]="products.imageLinks['smallThumbnail']" >
       <div class="category">
         <h5 class="category-name">{{products.title}}</h5>
       </div>
