--- a/client/my-app/src/app/components/product-preview/product-preview.component.html
+++ b/client/my-app/src/app/components/product-preview/product-preview.component.html
@@ -1,9 +1,9 @@
 
   <div class="item  col-xs-4 col-md-3">
       <div class="thumbnail">
-        <img class="group list-group-image" src="http://absfreepic.com/absolutely_free_photos/small_photos/book-shelf-3264x2448_35867.jpg"
-          alt="" /> 
-         <!-- <img class="group list-group-image" src="{{book['volumeInfo'].imageLinks}}" alt="">  -->
+        <!-- <img class="group list-group-image" src="http://absfreepic.com/absolutely_free_photos/small_photos/book-shelf-3264x2448_35867.jpg"
+          alt="" />  -->
+         <img class="group list-group-image" [src]="book['volumeInfo'].imageLinks['smallThumbnail']" alt=""> 
         <div class="category">
           <h5 class="category-name">{{book['volumeInfo'].title}}</h5>
         </div>
