--- a/myClient/my-app/src/app/components/cart-product/cart-product.component.html
+++ b/myClient/my-app/src/app/components/cart-product/cart-product.component.html
@@ -1,7 +1,7 @@
 
   <div class="item  col-xs-4 col-md-3">
     <div class="thumbnail">
-        <img class="group list-group-image" [src]="products.imageLinks['smallThumbnail']" >
+        <img class="group list-group-image" src="{{products.imageLinks['smallThumbnail']}}" >
       <div class="category">
         <h5 class="category-name">{{products.title}}</h5>
       </div>
