--- a/myClient/my-app/src/app/components/header/header.component.html
+++ b/myClient/my-app/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="logo" *ngIf="!user">
             <h1>Hello user</h1>
-            <img  src="http://static.eharmony.com/blog/wp-content/uploads/2010/04/eHarmony-Blog-profile-picture.jpg" />
+            <img  src="https://www.drupal.org/files/profile_default.jpg" />
         </div>
         <a href="#" class="navlink" routerLink="BookStore/account">
             ACCOUNT
