--- a/myClient/my-app/src/app/components/product-details/product-details.component.html
+++ b/myClient/my-app/src/app/components/product-details/product-details.component.html
@@ -2,7 +2,7 @@
 
 <div class="item  col-xs-4 col-md-3">
   <div class="thumbnail">
-    <img class="group list-group-image"  [src]="book.imageLinks['smallThumbnail']" >
+    <img class="group list-group-image"  src="{{book.imageLinks['smallThumbnail']}}" >
     <div class="category">
       <h5 class="category-name">{{book.title}}</h5>
     </div>
