--- a/myClient/my-app/src/app/components/product-preview/product-preview.component.html
+++ b/myClient/my-app/src/app/components/product-preview/product-preview.component.html
@@ -1,7 +1,7 @@
 
   <div class="item  col-xs-4 col-md-3">
       <div class="thumbnail">
-         <img class="group list-group-image" [src]="book['volumeInfo'].imageLinks['smallThumbnail']" alt=""> 
+         <img class="group list-group-image" src="{{book['volumeInfo'].imageLinks['smallThumbnail']}}" alt=""> 
         <div class="category">
           <h5 class="category-name">{{book['volumeInfo'].title}}</h5>
         </div>
